--- a/playbooks/hosts.ini
+++ b/playbooks/hosts.ini
@@ -1,10 +1,8 @@
-[instagain]
-35.237.207.76
+[app1]
+18.191.236.191
 
-[instagain:vars]
-ansible_ssh_user = gcloud
+[app1:vars]
+ansible_ssh_user = admin
 
 [saas:children]
-instagain
-
-
+app1
