--- a/playbooks/app-scripts/tasks/main.yml
+++ b/playbooks/app-scripts/tasks/main.yml
@@ -1,3 +1,4 @@
+# vim:ft=yaml.ansible
 ---
 # tasks file for app-scripts
 - name: "Copy run script"
@@ -15,3 +16,11 @@
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
     mode: "0755"
+
+- name: "Copy environment file"
+  ansible.builtin.template:
+    src: templates/.env.j2
+    dest: "{{ home }}/.env"
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+    mode: "0644"
