--- a/playbooks/app-scripts/tasks/main.yml
+++ b/playbooks/app-scripts/tasks/main.yml
@@ -14,7 +14,7 @@
     mode: "0755"
 
 - name: "Copy environment file"
-  ansible.builtin.template:
-    src: templates/.env.j2
+  ansible.builtin.copy:
+    src: file/.env
     dest: "{{ home }}/.env"
     mode: "0644"
