--- a/playbooks/go-app/handlers/main.yml
+++ b/playbooks/go-app/handlers/main.yml
@@ -2,8 +2,7 @@
 # handlers file for go-app
 - name: reload systemd
   ansible.builtin.systemd:
-    daemon_reload: yes
-
+    daemon_reload: true
 - name: start go app
   ansible.builtin.systemd:
     name: goapp
